--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,59 @@
 @charset "UTF-8";
 
 /*Lilás: #5f2c82    */
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+html, body{
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+#login{
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
+
+    transition: width 0.5s, height 0.5s;
+    transition-timing-function: ease;
+}
+
+#imagem{
+    display: block;
+    background: #5f2c82 url('../imagens/pexels-julia-barrantes-15926653.jpg') no-repeat;
+    background-size: cover;
+    background-position: center right;
+    height: 200px;
+}
+
+#formulario{
+    display: block;
+    text-align: center;
+    padding: 10px;
+}
+
+ p{
+   text-align: left;
+   margin-top: 10px;
+}
