--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,7 @@ main{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 512px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
@@ -49,11 +49,74 @@ main{
 
 #formulario{
     display: block;
-    text-align: center;
     padding: 10px;
 }
 
- p{
-   text-align: left;
-   margin-top: 10px;
+#formulario > h1{
+    margin-bottom: 10px;
+    text-align: center;
+    padding: 2;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
+}
+
+#entrar{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:rgb(97, 34, 122) ;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#entrar:hover{
+    background-color: rgb(165, 73, 201) ;
+}
+
+#formulario > form > a{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    padding-top: 7px;
+    width: 100%;
+    height: 40px;
+    text-decoration: none;
+    background-color: rgb(122, 30, 158);
+    color: rgb(255, 255, 255);
+    border: 1px solid rgb(110, 14, 148);
+    border-radius: 5px;
+}
+
+#formulario > form > a:hover{
+    background-color:rgb(171, 85, 206) ; ;
+}
+
+ #formulario > form > a > i{
+    margin-left: 5px;
+    font-size: 0.9em;
+    
+}
+
+.campo{
+    background-color: #5f2c82 ;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+.campo > label{
+    display: none;
+}
+
+#formulario > form >.campo{
+    color:white;
 }
