--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,8 +8,9 @@
 
    section#login{
         width: 80vw;
+        box-shadow: inset 1px 2px 4px rgba(0, 0, 0, 0.329);
     }
-
+    
     section#login > div#imagem {
         float: left;
         width: 30%;
@@ -18,6 +19,7 @@
     section#login > div#formulario{
         float: right;
         width: 70%;
+        margin-top: 100px;
     }
 
     div#formulario > h1{
@@ -25,8 +27,12 @@
     }
 
     div#formulario > p{
-        font-size: 1.2em;
+        text-indent: 15px;
+        font-size: 1.1em;
+        margin-top: 10px;
+        margin-bottom: 15px;
     }
+    
 }
 
 @media screen and (min-width: 992px){
@@ -36,7 +42,9 @@
     }
 
     section#login{
-        width: 940px;
+        position: relative;
+        width: 950px;
+        height: 500px;
     }
 
     section#login > div#imagem {
@@ -47,6 +55,10 @@
     section#login > div#formulario{
         float: right;
         width: 50%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-10%, -50%);
     }
 
     div#formulario > h1{
@@ -54,7 +66,8 @@
     }
 
     div#formulario > p{
-        font-size: 1.2em;
+        font-size: 1.1em;
+        text-indent: 25px;
     }
     
 }
