--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,15 +26,15 @@ main{
 
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
+    
     background-color: white;
     width: 250px;
     height: 512px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
-
+    
+    transform: translate(-50%, -50%);
     transition: width 0.5s, height 0.5s;
     transition-timing-function: ease;
 }
@@ -59,7 +59,7 @@ main{
 }
 
 div#formulario > p{
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 
 #entrar{
@@ -100,8 +100,7 @@ div#formulario > p{
 
  #formulario > form > a > i{
     margin-left: 5px;
-    font-size: 0.9em;
-    
+    font-size: 0.9em;   
 }
 
 .campo{
@@ -109,7 +108,7 @@ div#formulario > p{
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
@@ -117,6 +116,26 @@ div#formulario > p{
     display: none;
 }
 
-#formulario > form >.campo{
+#formulario > form >.campo > i{
     color:white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+.campo > input{
+    border: none;
+    background-color: rgb(180, 248, 180);
+    font-size: 1em;
+    width: calc(100% - 44px); /*100% do input - os 40 do icone*/
+    height: 90%;
+    border-radius: 8px;
+    padding: 4px;
+
+    transform: translate(-.5px ,-10px);
+}
+
+.campo >input:focus-within{
+    background-color: white;   
+    border: 1px dashed white;
 }
